# side-quest-py

./: .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  LICENSE  README.md  create_tables.py  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  init_db.py  mypy.ini  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  setup_pythonpath.sh  switch_cursorrules.py
.cursor/: settings.json
.github/workflows/: ci.yml  python-tests.yml
backend/: requirements.txt
docs/: python_imports.md
instance/: side_quest.db
migrations/: env.py
migrations/versions/: b5f96772d59e_create_initial_tables.py  f27553e4cfb0_add_user_table.py  f7e0ff18a446_initial_revision.py
scripts/: dev.sh
scripts/db/: seed_data.py  seed_test.py
src/: wsgi.py
src/migrations/versions/: f7e0ff18a446_initial_migration.py
src/side_quest_py/: __init__.py  config.py  db_utils.py
src/side_quest_py/models/: __init__.py  adventurer.py  db_models.py  quest.py  quest_completion.py  user.py
src/side_quest_py/routes/: adventurer_routes.py  auth_routes.py  quest_routes.py  user_routes.py
src/side_quest_py/services/: adventurer_service.py  auth_service.py  quest_service.py  user_service.py
tests/: conftest.py
tests/test_models/: test_adventurer.py  test_quest.py
tests/test_routes/: test_adventurer_routes.py  test_quest_routes.py
