[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "side_quest_py"
version = "0.1.0"
description = "A Python adventure quest project"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "python-ulid==3.0.0",
    # Add your runtime dependencies here
]

[project.optional-dependencies]
dev = [
    "black==23.3.0",
    "pylint==2.17.4",
    "mypy==1.3.0",
    "pytest==7.3.1"
]

[tool.black]
line-length = 120

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
filterwarnings = [
    "ignore::DeprecationWarning:ast.*:"
]
